k8s/api-admin/base/api-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-admin
  namespace: eventrunner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-admin
  template:
    metadata:
      labels:
        app: api-admin
    spec:
      serviceAccountName: eventrunner-account
      imagePullSecrets:
        - name: ghcr-io-cred
      containers:
        - name: api-admin
          image: ghcr.io/carverauto/api-admin:v0.0.04
          imagePullPolicy: Always
          volumeMounts:
            - name: config
              mountPath: /app/configs
            - name: nats-creds
              mountPath: /app/nats.creds
              subPath: nats.creds
      volumes:
        - name: config
          configMap:
            name: api-admin-config
        - name: nats-creds
          secret:
            secretName: nats-creds
            items:
              - key: nats.creds
                path: nats.creds
