k8s/api-admin/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-admin
  namespace: eventrunner
  labels:
    app: api-admin
spec:
  ports:
    - port: 80
      targetPort: 8200
      protocol: TCP
      name: http
  selector:
    app: api-admin
